feat(semantic): completar checklist de Fase 3 – Análisis Semántico con validación general

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Lint
         run: flake8
       - name: Run tests
-        run: pytest
+        run: pytest --cov=algorips --cov-report=term-missing
