--- a/gui/package.json
+++ b/gui/package.json
@@ -4,31 +4,43 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "make": "electron-builder"
+    "start": "react-scripts start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "electron": "^28.0.0",
+    "lucide-react": "^0.171.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^4.4.0",
     "recharts": "^2.8.0",
-    "lucide-react": "^0.171.0",
     "shadcn-ui": "^0.1.0",
-    "electron": "^28.0.0"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "electron-builder": "^24.0.0",
     "jest": "^29.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.0.0",
+    "react-scripts": "^5.0.1",
     "ts-jest": "^29.0.0",
-    "electron-builder": "^24.0.0"
+    "typescript": "^5.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
