--- a/.github/workflows/security-performance.yml
+++ b/.github/workflows/security-performance.yml
@@ -1,9 +1,9 @@
-name: CI
+name: Security and Performance
 
 on: [push, pull_request]
 
 jobs:
-  test:
+  check:
     runs-on: ubuntu-latest
     services:
       mysql:
@@ -20,8 +20,7 @@ jobs:
           --health-retries=3
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
       - name: Install dependencies
@@ -33,11 +32,12 @@ jobs:
               pip install -e "$d"
             fi
           done
-      - name: Lint
-        run: flake8
-      - name: Security Scan
+      - name: Run performance tests
         run: |
-          bandit -r .
-          pip-audit -r requirements.txt
-      - name: Run tests
-        run: pytest --cov=algorips --cov-report=term-missing
+          locust -f tests/performance/locustfile.py --headless -u 60 -r 10 -t 1m --csv=perf
+          pytest tests/benchmarks --benchmark-only
+      - name: Security scan
+        run: |
+          bandit -r . -lll
+          pip-audit -r requirements.txt --severity HIGH
+
