--- a/gui/package.json
+++ b/gui/package.json
@@ -31,6 +31,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.0.0",
     "ts-jest": "^29.0.0",
+    "ts-node": "^10.0.0",
     "electron-builder": "^24.0.0"
   }
 }
