--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,9 @@ jobs:
       - run: npm test
         working-directory: gui
       - run: python -m pip install -r requirements.txt
-      - run: pytest --cov=algorips
+      - run: flake8 algorips tests
+      - run: pytest -m "not integration" --cov=algorips
+      - run: pytest -m integration
       - uses: actions/upload-artifact@v3
         with:
           name: coverage
