--- a/gui/tsconfig.json
+++ b/gui/tsconfig.json
@@ -9,5 +9,5 @@
     "outDir": "dist"
   },
   "include": ["src/**/*", "electron.ts", "index.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/__tests__"]
 }
