--- a/gui/package.json
+++ b/gui/package.json
@@ -38,6 +38,8 @@
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.90.0",
     "webpack-cli": "^5.0.0",
-    "ts-loader": "^9.5.0"
+    "ts-loader": "^9.5.0",
+    "style-loader": "^3.3.3",
+    "css-loader": "^6.8.1"
   }
 }
