--- a/gui/package.json
+++ b/gui/package.json
@@ -40,6 +40,10 @@
     "webpack-cli": "^5.0.0",
     "ts-loader": "^9.5.0",
     "style-loader": "^3.3.3",
-    "css-loader": "^6.8.1"
+    "css-loader": "^6.8.1",
+    "postcss-loader": "^7.0.2",
+    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.14"
   }
 }
