--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,10 @@ services:
       - mysql
 
   ollama:
-    image: ollama/llama3
+    image: ${OLLAMA_IMAGE:-ollama/llama3}
     command: serve
+    environment:
+      - OLLAMA_MODEL=${OLLAMA_MODEL:-llama3}
     ports:
       - "11434:11434"
     volumes:
