--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ MYSQL_USER=root
 MYSQL_PASSWORD=example
 MYSQL_HOST=localhost
 OLLAMA_URL=http://localhost:11434
+MYSQL_POOL_SIZE=5
+MYSQL_POOL_TIMEOUT=30
